
[project]
name = "eeskew-pwg-test-000"
description = "A test project for presentation to the WSU Python Working Group."
authors = [
    {name = "Edward Eskew", email = "edward.eskew@wsu.edu"},
]
dependencies = [
    "cowsay>=5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "file", path = "src/eeskew_pwg_test_000/__version__.py" }

[tool.pdm.scripts]
test-publish.shell = '''\
VERSION="$(pdm show --version)" &&
pdm bump micro > /dev/null &&
pdm bump to "$(pdm show --version).dev$(date +%s)" &&
pdm publish -r testpypi &&
pdm bump to "$VERSION"
'''

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
